# cobol-compiler

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SMOKE-INDEX  TEST-INDEX  gen_expected.sh
.github/workflows/: pr-validation.yml
crates/cobol-ast/: Cargo.toml
crates/cobol-ast/src/: lib.rs
crates/cobol-codegen-cranelift/: Cargo.toml
crates/cobol-codegen-cranelift/src/: lib.rs
crates/cobol-codegen-llvm/: Cargo.toml
crates/cobol-codegen-llvm/src/: lib.rs
crates/cobol-db/: Cargo.toml
crates/cobol-db/src/: lib.rs
crates/cobol-diag/: Cargo.toml
crates/cobol-diag/src/: lib.rs
crates/cobol-driver/: Cargo.toml
crates/cobol-driver/src/: main.rs
crates/cobol-hir/: Cargo.toml
crates/cobol-hir/src/: lib.rs
crates/cobol-intern/: Cargo.toml
crates/cobol-intern/src/: lib.rs
crates/cobol-lexer/: Cargo.toml
crates/cobol-lexer/src/: lib.rs
crates/cobol-lsp/: Cargo.toml
crates/cobol-lsp/src/: lib.rs
crates/cobol-mir/: Cargo.toml
crates/cobol-mir/src/: lib.rs  passes.rs
crates/cobol-parser/: Cargo.toml
crates/cobol-parser/src/: lib.rs
crates/cobol-pp/: Cargo.toml
crates/cobol-pp/src/: lib.rs
crates/cobol-runtime/: Cargo.toml
crates/cobol-runtime/src/: arithmetic.rs  compare.rs  decimal.rs  display.rs  file_io.rs  inspect.rs  intrinsics.rs  lib.rs  memory.rs  perform.rs  sort.rs
crates/cobol-span/: Cargo.toml
crates/cobol-span/src/: lib.rs
crates/cobol-vfs/: Cargo.toml
crates/cobol-vfs/src/: lib.rs
tests/bench/: BENCH-ARITH.cob  BENCH-COMPARE.cob  BENCH-DECIMAL.cob  BENCH-INTRINSIC.cob  BENCH-MOVE.cob  BENCH-PERFORM.cob  BENCH-STRING.cob  BENCH-TABLE.cob  run_benchmarks.sh
tests/nist/: IC101A-SUB.cob  IC101A.cob  IC102A-SUB.cob  IC102A.cob  IC103A-SUB.cob  IC103A.cob  IC104A-SUB.cob  IC104A.cob  IC105A-SUB.cob  IC105A.cob  IC106A-SUB.cob  IC106A.cob  IC107A-SUB.cob  IC107A.cob  IC201A-SUB.cob  IC201A.cob  IC202A-SUB.cob  IC202A.cob  IC203A-SUB.cob  IC203A.cob  IC204A-SUB.cob  IC204A.cob  IC205A-SUB.cob  IC205A.cob  IC206A-SUB.cob  IC206A.cob  IC207A-SUB.cob  IC207A.cob  IC208A-SUB.cob  IC208A.cob  IC209A-SUB.cob  IC209A.cob  IC210A-SUB.cob  IC210A.cob  IC211A-SUB.cob  IC211A.cob  IC212A-SUB.cob  IC212A.cob  IC213A-SUB.cob  IC213A.cob  (+431 more)
tests/nist/copybooks/: SM-ALPHA.cpy  SM-FIELDS.cpy  SM-LEADING.cpy  SM-MULTI.cpy  SM-NESTED-INNER.cpy  SM-NESTED-OUTER.cpy  SM-NUMER.cpy  SM-PROC.cpy  SM-REPLACE.cpy  SM-TRAIL.cpy  SM216A-CPY.cpy  SM217A-CPY.cpy  SM219A-INNER.cpy  SM219A-OUTER.cpy  SM220A-CPY.cpy  SMCPY16.cpy  SMCPY17.cpy  SMCPY18A.cpy  SMCPY18B.cpy  SMCPY19.cpy  SMCPY20D.cpy  SMCPY20P.cpy
tests/nist/expected/: IC101A.txt  IC102A.txt  IC103A.txt  IC104A.txt  IC105A.txt  IC106A.txt  IC107A.txt  IC201A.txt  IC202A.txt  IC203A.txt  IC204A.txt  IC205A.txt  IC206A.txt  IC207A.txt  IC208A.txt  IC209A.txt  IC210A.txt  IC211A.txt  IC212A.txt  IC213A.txt  IC214A.txt  IC215A.txt  IC216A.txt  IC217A.txt  IC218A.txt  IC219A.txt  IC220A.txt  IF101A.txt  IF102A.txt  IF103A.txt  IF104A.txt  IF105A.txt  IF106A.txt  IF107A.txt  IF108A.txt  IF109A.txt  IF110A.txt  IF111A.txt  IF112A.txt  IF113A.txt  (+381 more)
tests/smoke/: CALL-SUB.cob  HELLO-WORLD.cob  SMOKE-ACCEPT.cob  SMOKE-ARITH.cob  SMOKE-CALL.cob  SMOKE-CLASS.cob  SMOKE-COMP.cob  SMOKE-COMPUTE.cob  SMOKE-CONTINUE.cob  SMOKE-COPY.cob  SMOKE-DECIMAL.cob  SMOKE-DEEDIT.cob  SMOKE-DIVIDE.cob  SMOKE-EVALUATE.cob  SMOKE-FIGCONST.cob  SMOKE-FILE.cob  SMOKE-FREE.cob  SMOKE-GOBACK-SUB.cob  SMOKE-GOBACK.cob  SMOKE-GOTO.cob  SMOKE-IF.cob  SMOKE-INDEX.cob  SMOKE-INIT.cob  SMOKE-INTRINSIC.cob  SMOKE-MULTIPLY.cob  SMOKE-NESTED.cob  SMOKE-NUMEDIT.cob  SMOKE-PERFORM.cob  SMOKE-RELATIVE.cob  SMOKE-SEARCH.cob  SMOKE-SET.cob  SMOKE-SIGNED.cob  SMOKE-SORT.cob  SMOKE-STRING.cob  SMOKE-SUB.cob  run_smoke_tests.sh
tests/smoke/copybooks/: WS-FIELDS.cpy
tests/smoke/expected/: SMOKE-ACCEPT.txt  SMOKE-CLASS.txt  SMOKE-COMP.txt  SMOKE-CONTINUE.txt  SMOKE-COPY.txt  SMOKE-DECIMAL.txt  SMOKE-DEEDIT.txt  SMOKE-DIVIDE.txt  SMOKE-FREE.txt  SMOKE-GOBACK.txt  SMOKE-GOTO.txt  SMOKE-INDEX.txt  SMOKE-INTRINSIC.txt  SMOKE-RELATIVE.txt  SMOKE-SET.txt  SMOKE-SORT.txt  SMOKE-STRING.txt
tools/: run-nist-tests.sh
tools/bench/: Cargo.toml
tools/bench/benches/: pipeline.rs
tools/bench/src/: lib.rs
tools/nist-runner/: Cargo.toml
tools/nist-runner/src/: main.rs
