[workspace]
resolver = "2"
members = [
    "crates/cobol-intern",
    "crates/cobol-span",
    "crates/cobol-vfs",
    "crates/cobol-pp",
    "crates/cobol-lexer",
    "crates/cobol-parser",
    "crates/cobol-ast",
    "crates/cobol-hir",
    "crates/cobol-mir",
    "crates/cobol-codegen-llvm",
    "crates/cobol-codegen-cranelift",
    "crates/cobol-runtime",
    "crates/cobol-diag",
    "crates/cobol-db",
    "crates/cobol-lsp",
    "crates/cobol-driver",
    "tools/nist-runner",
    "tools/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobolc/cobolc"
description = "The world's best open-source COBOL compiler"

[workspace.dependencies]
# Internal crates
cobol-intern = { path = "crates/cobol-intern" }
cobol-span = { path = "crates/cobol-span" }
cobol-vfs = { path = "crates/cobol-vfs" }
cobol-pp = { path = "crates/cobol-pp" }
cobol-lexer = { path = "crates/cobol-lexer" }
cobol-parser = { path = "crates/cobol-parser" }
cobol-ast = { path = "crates/cobol-ast" }
cobol-hir = { path = "crates/cobol-hir" }
cobol-mir = { path = "crates/cobol-mir" }
cobol-codegen-llvm = { path = "crates/cobol-codegen-llvm" }
cobol-codegen-cranelift = { path = "crates/cobol-codegen-cranelift" }
cobol-runtime = { path = "crates/cobol-runtime" }
cobol-diag = { path = "crates/cobol-diag" }
cobol-db = { path = "crates/cobol-db" }
cobol-lsp = { path = "crates/cobol-lsp" }

# External dependencies
rowan = "0.15"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
smol_str = "0.2"
la-arena = "0.3"
text-size = "1.1"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inkwell = { version = "0.5", features = ["llvm18-0"] }
criterion = { version = "0.5", features = ["html_reports"] }
