[package]
name = "cobol-codegen-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLVM codegen backend for the cobolc compiler"

[features]
default = []
llvm = ["inkwell"]

[dependencies]
cobol-mir = { workspace = true }
cobol-span = { workspace = true }
inkwell = { workspace = true, optional = true }
