[package]
name = "cobol-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level IR: semantic analysis, PIC types, data layout, name resolution"

[dependencies]
cobol-intern = { workspace = true }
cobol-span = { workspace = true }
cobol-ast = { workspace = true }
cobol-parser = { workspace = true }
la-arena = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
cobol-lexer = { workspace = true }
